updated mixins & references to work with the newest versions of cosmic reach 0.15.13+